# pybind_ws

./: .gitignore  CMakeLists.txt  ScriptExecutor.h  main.cpp
project/: CMakeLists.txt  main.cpp  mymodule.cpp  script.py
script/: script.py
